Fixes CSS of form boxes, re-aligns feedback messaging
Also sets up placeholder code for:
- Delete confirm modal
- No cards yet message

--- a/src/app/auth/sign-up/sign-up.component.css
+++ b/src/app/auth/sign-up/sign-up.component.css
@@ -1,3 +1,8 @@
+.failure {
+  text-align: center;
+  color: red;
+}
+
 .container {
  z-index: 22;
  text-align: center;
