--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,5 +1,5 @@
 .cn-container{
-  top: 10%;
+  top: 12%;
   left: 18%;
 	/*width: 100%;*/
   min-width: 600px;
@@ -45,7 +45,7 @@ h3 {
 .cn-slide{
 	text-align: center;
 	position: absolute;
-	padding-top: 80px;
+	padding-top: 40px;
 	margin: 0 5%;
 	width: 100%;
   transition: left 0.4s linear, opacity 0.4s linear;
